2001-09-28  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ebsa285_flash.c (flash_hwr_init): Only re-enable icache if it
	was enabled before.

2001-07-11  Andrew Lunn <andrew.lunn@ascom.ch>

	* src/flash.h:
	* src/ebsa285_flash.c (flash_hwr_init): Support new device 28F008SC.

2001-06-11  Gary Thomas  <gthomas@redhat.com>

	* src/ebsa285_flash.c: Remove dependency on printf() via user functions.

2001-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/flash_ebsa285.cdl: Needs IO controller to copy functions to
	RAM.

2000-12-05  Jonathan Larmour  <jlarmour@redhat.com>

	* src/ebsa285_flash.c (flash_code_overlaps): Define stext/etext
	as array types so no assumptions can be made by the compiler about
	location.

2000-08-29  Gary Thomas  <gthomas@redhat.com>

	* src/ebsa285_flash.c: Improve error decoding.

2000-08-22  Hugo Tyson  <hmt@cygnus.co.uk>

	* src/ebsa285_flash.c (flash_hwr_init): Add
	HAL_ICACHE_DISABLE/ENABLE pairs around calls to RAM copy of query
	function - this is necessary to get reliable operation on EBSA285
	and similar.  Otherwise, what is in the instruction cache might be
	run instead.

2000-08-15  Gary Thomas  <gthomas@redhat.com>

	* src/ebsa285_flash.c (flash_code_overlaps): 
	stext,etext now are _stext,_etext

2000-08-14  Gary Thomas  <gthomas@redhat.com>

	* src/ebsa285_flash.c: New file(s).

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY