@@ -54,7 +54,6 @@
 
 #include <pkgconf/hal.h>
 #include <cyg/hal/hal_arch.h>
-#include <cyg/hal/hal_cache.h>
 
 //
 // CAUTION!  This code must be copied to RAM before execution.  Therefore,
@@ -66,14 +65,7 @@ flash_program_buf(volatile unsigned long *addr, unsigned long *data, int len)
 {
     unsigned long stat;
     int timeout = 5000000;
-    int cache_on;
     volatile unsigned long *orig_addr = addr;
-
-    HAL_DCACHE_IS_ENABLED(cache_on);
-    if (cache_on) {
-        HAL_DCACHE_SYNC();
-        HAL_DCACHE_DISABLE();
-    }
 
     // Clear any error conditions
     *addr = FLASH_Clear_Status;
@@ -94,10 +86,6 @@ flash_program_buf(volatile unsigned long *addr, unsigned long *data, int len)
     // Restore ROM to "normal" mode
  bad:
     *orig_addr = FLASH_Reset;            
-
-    if (cache_on) {
-        HAL_DCACHE_ENABLE();
-    }
 
     return stat;
 }
